force-app/objects/Email_to_sObject_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If no match found for the threadId</inlineHelpText>
        <label>Create Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Log_EmailMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log EmailMessage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thread_Id_Field_API_Name__c</fullName>
        <label>Thread Id Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Email_Address__c</fullName>
        <label>To Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>particle__c</fullName>
        <label>particle</label>
        <metadataRelationshipControllingField>Email_to_sObject_Mapping__mdt.sobjecttype__c</metadataRelationshipControllingField>
        <referenceTo>EntityParticle</referenceTo>
        <relationshipLabel>Email_to_sObject_Mappings</relationshipLabel>
        <relationshipName>Email_to_sObject_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sObject_Type__c</fullName>
        <label>sObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sobjecttype__c</fullName>
        <label>sobjecttype</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Email_to_sObject_Mappings</relationshipLabel>
        <relationshipName>Email_to_sObject_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>threadfield__c</fullName>
        <label>threadfield</label>
        <metadataRelationshipControllingField>Email_to_sObject_Mapping__mdt.sobjecttype__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Email_to_sObject_Mappings</relationshipLabel>
        <relationshipName>Email_to_sObject_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Email to sObject Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Order__c</columns>
        <columns>To_Email_Address__c</columns>
        <columns>Keywords__c</columns>
        <columns>sObject_Type__c</columns>
        <columns>Create_Record__c</columns>
        <columns>Log_EmailMessage__c</columns>
        <columns>Thread_Id_Field_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Email to sObject Mappings</pluralLabel>
</CustomObject>